--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -53,12 +53,12 @@
                     android:maxLines="1"
                     android:text="Contact Name"
                     android:textSize="28sp"
-                    app:layout_constraintBottom_toTopOf="@+id/mobile"
+                    app:layout_constraintBottom_toTopOf="@+id/mobileType"
                     app:layout_constraintStart_toEndOf="@+id/textName"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/mobile"
+                    android:id="@+id/mobileType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -79,7 +79,7 @@
                     android:text="+91232143912"
                     android:textSize="22sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/mobile"
+                    app:layout_constraintStart_toEndOf="@+id/mobileType"
                     app:layout_constraintTop_toBottomOf="@+id/contactName" />
 
                 <ImageButton
