--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -13,8 +13,10 @@
             android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
                 <TextView
                     android:id="@+id/textName"
@@ -46,41 +48,49 @@
 
                 <TextView
                     android:id="@+id/contactName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="Contact Name"
                     android:textSize="28sp"
-                    app:layout_constraintBottom_toTopOf="@+id/mobileType"
                     app:layout_constraintStart_toEndOf="@+id/textName"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/mobileType"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="290dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="Mobile"
-                    android:textSize="22sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textName" />
+                    android:orientation="horizontal"
+                    android:layout_marginStart="50dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/contactName">
 
-                <TextView
-                    android:id="@+id/mobileNumber"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="+91232143912"
-                    android:textSize="22sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/mobileType"
-                    app:layout_constraintTop_toBottomOf="@+id/contactName" />
+                        <TextView
+                            android:id="@+id/mobileType"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="Mobile"
+                            android:textSize="22sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/textName" />
+
+                        <TextView
+                            android:id="@+id/mobileNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="+91232143912"
+                            android:textSize="22sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/mobileType"
+                            app:layout_constraintTop_toBottomOf="@+id/contactName" />
+                </LinearLayout>
 
                 <ImageButton
                     android:id="@+id/callButton"
